<resources>
    <string name="app_name">YM Player</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="local_songs">Local Songs</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Appearance</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="play_pause">play_pause</string>
    <string name="about">About</string>
    <string name="author_name">Yashobanta Kumar Behera</string>
    <string name="changelog">
        -----------------------------------\n
        Version 1.4.5\n
        -----------------------------------\n
        * Mp3 Download in 128Kbps, 192Kbps and 320Kbps added\n
        * 5 Band Equalizer added\n
        * Now stream audio in HIGH, MEDIUM and LOW Qualities\n
        * Playlist playback support both online and offline audio files\n
        * Crash report send function added\n
        * Bug fixes\n
        -----------------------------------\n
        Version 1.4\n
        ------------------------------------\n
        * Google assistant integration for media controls\n
        * Youtube API integrated for online streaming\n
        -----------------------------------\n
        Version 1.2\n
        -----------------------------------\n
        * Added add to favourite button\n
        * Added shuffle button\n
        * Background is now blurred with song embedded art\n
        * Implemented playing Queue and arranging items\n
        * Some minor bug fixes\n
        -----------------------------------\n
        Initial Version 1.0\n
        -----------------------------------\n
        * This is initial build, the basic music playing operations are included.\n
    </string>
    <string name="spotify_songs">Spotify Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="songs">Songs</string>
    <string name="youtube_songs">Youtube Songs</string>
    <string name="eq">Equalizer</string>
    <string name="downloads">Downloads</string>
    <string name="list_name">list_name</string>
    <string name="list_image">list_image</string>
    <string name="play_single">Play Single</string>
    <string name="queue_next">Queue Next</string>
    <string name="download">Download</string>
    <string name="_128kbps">128Kbps</string>
    <string name="_192kbps">192Kbps</string>
    <string name="_320kbps">320Kbps</string>
    <string name="queue_last">Queue Last</string>
    <string name="support_youtube">Support youtube</string>
    <string name="ym_player">\@YM Player</string>
    <string name="play_all">Play all</string>
    <string name="more">More</string>
    <string name="no_downloads_available">No downloads available</string>
</resources>
