<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/play_single"
        android:title="@string/play_single" />

    <item
        android:id="@+id/queue_next"
        android:title="@string/queue_next" />

    <item android:title="@string/download">
       <menu>
           <item
               android:id="@+id/download128kbps"
               android:title="@string/_128kbps" />
           <item
               android:id="@+id/download192kbps"
               android:title="@string/_192kbps" />
           <item
               android:id="@+id/download320kbps"
               android:title="@string/_320kbps" />
       </menu>
    </item>


    <item
        android:id="@+id/queue_last"
        android:title="@string/queue_last" />
</menu>