<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <!-- <item
             android:id="@+id/spotifySongs"
             android:icon="@drawable/ic_spotify"
             android:title="@string/spotify_songs" />-->
        <item
            android:id="@+id/youtubeLibSongs"
            android:icon="@drawable/youtube_video_library_24"
            android:title="@string/youtube_songs" />
        <item
            android:id="@+id/localSongs"
            android:icon="@drawable/ic_library_music_24"
            android:title="@string/local_songs" />
        <item
            android:id="@+id/downloads"
            android:icon="@drawable/ic_download"
            android:title="@string/downloads" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/about" />
    </group>
    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share" />
        </menu>
    </item>
</menu>